--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPZvetwdq09BsdDyUv0nJ5",
+      "authorship_tag": "ABX9TyNQQ+vyl/XcySHg1zblbbRu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,55 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Import Libraries\n"
+      ],
+      "metadata": {
+        "id": "tsVSgzEDyrXx"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "eMLXEIKKkYJk"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Purpose: Import necessary libraries for data processing, model building, and visualization.\n",
+        "import os\n",
+        "import random\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from skimage.io import imread, imshow\n",
+        "from skimage.transform import resize\n",
+        "from tqdm import tqdm\n",
+        "from sklearn.utils import shuffle\n",
+        "from tensorflow.keras import backend as K\n",
+        "import seaborn as sns\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "import shutil\n",
+        "from google.colab import drive\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Set random seed for reproducibility\n",
+        "seed = 2019\n",
+        "random.seed(seed)\n",
+        "np.random.seed(seed)\n",
+        "tf.random.set_seed(seed)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ERfyMrG-yyic"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
