# Cell 2: Google Drive Setup

--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQQ+vyl/XcySHg1zblbbRu",
+      "authorship_tag": "ABX9TyNCEZaBEZUyYfyVKgUf+KDx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,8 +69,49 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Google Drive Setup\n"
+      ],
+      "metadata": {
+        "id": "rGN3IDO0zD-9"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Purpose: Mount Google Drive, set paths for dataset and models, and copy dataset if not already present.\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Define Drive paths\n",
+        "drive_dataset_path = '/content/drive/MyDrive/Hippocampus_Dataset'\n",
+        "drive_model_path = '/content/drive/MyDrive/Hippocampus_Models'\n",
+        "local_dataset_path = '/content/hippocampus_dataset'\n",
+        "\n",
+        "# Create directories if they don't exist\n",
+        "os.makedirs(drive_dataset_path, exist_ok=True)\n",
+        "os.makedirs(drive_model_path, exist_ok=True)\n",
+        "\n",
+        "# Check if dataset exists in Drive\n",
+        "if not os.path.exists(os.path.join(drive_dataset_path, 'aug')):\n",
+        "    print(\"Copying dataset to Google Drive...\")\n",
+        "    shutil.copy('/content/hippocampus segmentation dataset.zip', drive_dataset_path)\n",
+        "    !unzip -q \"{os.path.join(drive_dataset_path, 'hippocampus segmentation dataset.zip')}\" -d \"{local_dataset_path}\"\n",
+        "    shutil.copytree(local_dataset_path, os.path.join(drive_dataset_path, 'hippocampus_dataset'))\n",
+        "else:\n",
+        "    print(\"Loading dataset from Google Drive...\")\n",
+        "    shutil.copytree(os.path.join(drive_dataset_path, 'hippocampus_dataset'), local_dataset_path)\n",
+        "\n",
+        "# Debug: Check dataset contents\n",
+        "print(\"Dataset contents:\")\n",
+        "!ls {local_dataset_path}\n",
+        "print(\"Images folder:\")\n",
+        "!ls {os.path.join(local_dataset_path, 'aug/images')}\n",
+        "print(\"Left masks folder:\")\n",
+        "!ls {os.path.join(local_dataset_path, 'aug/masks/left')}\n",
+        "print(\"Right masks folder:\")\n",
+        "!ls {os.path.join(local_dataset_path, 'aug/masks/right')}"
+      ],
       "metadata": {
         "id": "ERfyMrG-yyic"
       },
