--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiQudFIyaJwgIDl5J2Mxxq",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPnFYZmd5B8JFO3tPD4RQTS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -84,19 +86,19 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "HDoOUfVCziGX",
-        "outputId": "def12475-564a-49e9-d0b2-65a3077aa24f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HDoOUfVCziGX",
+        "outputId": "b3477139-0be4-4e19-91b1-7c0da7432c07"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -104,12 +106,22 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "# Define Drive paths\n",
         "drive_dataset_path = '/content/drive/MyDrive/Hippocampus_Dataset'\n",
         "drive_model_path = '/content/drive/MyDrive/Hippocampus_Models'\n",
-        "local_dataset_path = '/content/hippocampus_dataset'\n",
+        "local_dataset_path = '/content/hippocampus_dataset'\n"
+      ],
+      "metadata": {
+        "id": "BxdxYst26NQG"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
         "\n",
         "# Create directories if they don't exist\n",
         "os.makedirs(drive_dataset_path, exist_ok=True)\n",
