--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO2Vq+X5HERIXjAIT1OZJEn",
+      "authorship_tag": "ABX9TyOTf5b09QFyWTF3rHTvcKch",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -762,6 +762,77 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Custom Functions\n"
+      ],
+      "metadata": {
+        "id": "rUkDIagtB5fI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Purpose: Define montage function and metrics for evaluation.\n",
+        "def custom_montage(images, n_rows=5, n_cols=5, cmap='gray'):\n",
+        "    if images.shape[0] == 0:\n",
+        "        print(\"No images to display in montage.\")\n",
+        "        return None\n",
+        "    n_images = min(images.shape[0], n_rows * n_cols)\n",
+        "    images = images[:n_images]\n",
+        "    if images.ndim == 4:\n",
+        "        images = images[..., 0]\n",
+        "    h, w = images.shape[1], images.shape[2]\n",
+        "    fig, ax = plt.subplots(n_rows, n_cols, figsize=(n_cols * 2, n_rows * 2))\n",
+        "    ax = ax.ravel()\n",
+        "    for i in range(n_images):\n",
+        "        ax[i].imshow(images[i], cmap=cmap)\n",
+        "        ax[i].axis('off')\n",
+        "    for i in range(n_images, len(ax)):\n",
+        "        ax[i].axis('off')\n",
+        "    plt.tight_layout()\n",
+        "    return fig\n",
+        "\n",
+        "smooth = 1.\n",
+        "\n",
+        "def dice_coef(y_true, y_pred):\n",
+        "    y_true_f = K.flatten(y_true)\n",
+        "    y_pred_f = K.flatten(y_pred)\n",
+        "    intersection = K.sum(y_true_f * y_pred_f)\n",
+        "    return (2. * intersection + smooth) / (K.sum(y_true_f) + K.sum(y_pred_f) + smooth)\n",
+        "\n",
+        "def dice_coef_loss(y_true, y_pred):\n",
+        "    return 1.0 - dice_coef(y_true, y_pred)\n",
+        "\n",
+        "def iou(y_true, y_pred):\n",
+        "    y_true_f = K.flatten(y_true)\n",
+        "    y_pred_f = K.flatten(y_pred)\n",
+        "    intersection = K.sum(y_true_f * y_pred_f)\n",
+        "    union = K.sum(y_true_f) + K.sum(y_pred_f) - intersection\n",
+        "    return (intersection + smooth) / (union + smooth)\n",
+        "\n",
+        "def compute_metrics(y_true, y_pred, threshold=0.5):\n",
+        "    y_pred_bin = (y_pred > threshold).astype(np.float32)\n",
+        "    y_true_f = y_true.flatten()\n",
+        "    y_pred_f = y_pred_bin.flatten()\n",
+        "    intersection = np.sum(y_true_f * y_pred_f)\n",
+        "    dice = (2. * intersection + smooth) / (np.sum(y_true_f) + np.sum(y_pred_f) + smooth)\n",
+        "    union = np.sum(y_true_f) + np.sum(y_pred_f) - intersection\n",
+        "    iou_score = (intersection + smooth) / (union + smooth)\n",
+        "    true_pos = intersection\n",
+        "    false_pos = np.sum(y_pred_f) - intersection\n",
+        "    false_neg = np.sum(y_true_f) - intersection\n",
+        "    precision = true_pos / (true_pos + false_pos + smooth)\n",
+        "    recall = true_pos / (true_pos + false_neg + smooth)\n",
+        "    return dice, iou_score, precision, recall"
+      ],
+      "metadata": {
+        "id": "kXrY8blVBuUh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
