--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOTf5b09QFyWTF3rHTvcKch",
+      "authorship_tag": "ABX9TyMfIZuQkwJtmAaVwHXUCP6b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -830,6 +830,92 @@
       ],
       "metadata": {
         "id": "kXrY8blVBuUh"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cell 5: ResUNet Model\n"
+      ],
+      "metadata": {
+        "id": "ZiZ39yG-CWtW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Purpose: Define and compile the ResUNet model for segmentation.\n",
+        "def bn_act(x, act=True):\n",
+        "    x = keras.layers.BatchNormalization()(x)\n",
+        "    if act:\n",
+        "        x = keras.layers.Activation(\"relu\")(x)\n",
+        "    return x\n",
+        "\n",
+        "def conv_block(x, filters, kernel_size=(3, 3), padding=\"same\", strides=1):\n",
+        "    conv = bn_act(x)\n",
+        "    conv = keras.layers.Conv2D(filters, kernel_size, padding=padding, strides=strides)(conv)\n",
+        "    return conv\n",
+        "\n",
+        "def stem(x, filters, kernel_size=(3, 3), padding=\"same\", strides=1):\n",
+        "    conv = keras.layers.Conv2D(filters, kernel_size, padding=padding, strides=strides)(x)\n",
+        "    conv = conv_block(conv, filters, kernel_size=kernel_size, padding=padding, strides=strides)\n",
+        "    shortcut = keras.layers.Conv2D(filters, kernel_size=(1, 1), padding=padding, strides=strides)(x)\n",
+        "    shortcut = bn_act(shortcut, act=False)\n",
+        "    output = keras.layers.Add()([conv, shortcut])\n",
+        "    return output\n",
+        "\n",
+        "def residual_block(x, filters, kernel_size=(3, 3), padding=\"same\", strides=1):\n",
+        "    res = conv_block(x, filters, kernel_size=kernel_size, padding=padding, strides=strides)\n",
+        "    res = conv_block(res, filters, kernel_size=kernel_size, padding=padding, strides=1)\n",
+        "    shortcut = keras.layers.Conv2D(filters, kernel_size=(1, 1), padding=padding, strides=strides)(x)\n",
+        "    shortcut = bn_act(shortcut, act=False)\n",
+        "    output = keras.layers.Add()([shortcut, res])\n",
+        "    return output\n",
+        "\n",
+        "def upsample_concat_block(x, xskip):\n",
+        "    u = keras.layers.UpSampling2D((2, 2))(x)\n",
+        "    c = keras.layers.Concatenate()([u, xskip])\n",
+        "    return c\n",
+        "\n",
+        "def ResUNet():\n",
+        "    f = [16, 32, 64, 128, 256]\n",
+        "    inputs = keras.layers.Input((IMG_HEIGHT, IMG_WIDTH, IMG_CHANNELS))\n",
+        "\n",
+        "    # Encoder\n",
+        "    e0 = inputs\n",
+        "    e1 = stem(e0, f[0])\n",
+        "    e2 = residual_block(e1, f[1], strides=2)\n",
+        "    e3 = residual_block(e2, f[2], strides=2)\n",
+        "    e4 = residual_block(e3, f[3], strides=2)\n",
+        "    e5 = residual_block(e4, f[4], strides=2)\n",
+        "\n",
+        "    # Bridge\n",
+        "    b0 = conv_block(e5, f[4], strides=1)\n",
+        "    b1 = conv_block(b0, f[4], strides=1)\n",
+        "\n",
+        "    # Decoder\n",
+        "    u1 = upsample_concat_block(b1, e4)\n",
+        "    d1 = residual_block(u1, f[4])\n",
+        "    u2 = upsample_concat_block(d1, e3)\n",
+        "    d2 = residual_block(u2, f[3])\n",
+        "    u3 = upsample_concat_block(d2, e2)\n",
+        "    d3 = residual_block(u3, f[2])\n",
+        "    u4 = upsample_concat_block(d3, e1)\n",
+        "    d4 = residual_block(u4, f[1])\n",
+        "\n",
+        "    outputs = keras.layers.Conv2D(1, (1, 1), padding=\"same\", activation=\"sigmoid\")(d4)\n",
+        "    model = keras.models.Model(inputs, outputs)\n",
+        "    return model\n",
+        "\n",
+        "resunet_model = ResUNet()\n",
+        "optimizer = keras.optimizers.Adam(learning_rate=1e-3)\n",
+        "resunet_model.compile(optimizer=optimizer, loss=dice_coef_loss, metrics=[dice_coef, iou])\n",
+        "resunet_model.summary()"
+      ],
+      "metadata": {
+        "id": "RBiaGuRVCOTE"
       },
       "execution_count": null,
       "outputs": []
