--- a/Hippo_Seg.ipynb
+++ b/Hippo_Seg.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMfIZuQkwJtmAaVwHXUCP6b",
+      "authorship_tag": "ABX9TyOvfGEtdY/P06j95yataIvz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -837,7 +837,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Cell 5: ResUNet Model\n"
+        "# ResUNet Model\n"
       ],
       "metadata": {
         "id": "ZiZ39yG-CWtW"
@@ -1554,6 +1554,13 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "hPagn_DECzs4"
+      }
     }
   ]
 }
